[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/ScoreBoard.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/font_tiny.tres" type="DynamicFont" id=3]

[node name="ScoreBoard" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Background" type="ColorRect" parent="."]
margin_right = 500.0
margin_bottom = 500.0
color = Color( 0.027451, 0.0627451, 0.0745098, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="Background/LoadingContainer"]
margin_left = 162.0
margin_right = 338.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "loading"

[node name="RecordsContainer" type="CenterContainer" parent="Background"]
visible = false
anchor_right = 1.0
margin_bottom = 399.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/RecordsContainer"]
margin_left = 68.0
margin_right = 432.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLabel" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_right = 364.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/RecordsContainer/VBoxContainer/TopLabel"]
margin_right = 364.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "dreamt longest"

[node name="Record" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 364.0
margin_bottom = 93.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record2" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 364.0
margin_bottom = 127.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record2"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record2"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record3" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 364.0
margin_bottom = 161.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record3"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record3"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record4" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 364.0
margin_bottom = 195.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record4"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record4"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record5" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 364.0
margin_bottom = 229.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record5"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record5"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record6" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 364.0
margin_bottom = 263.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record6"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record6"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record7" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 364.0
margin_bottom = 297.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record7"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record7"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record8" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 364.0
margin_bottom = 331.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record8"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record8"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record9" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 364.0
margin_bottom = 365.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record9"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record9"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Record10" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 364.0
margin_bottom = 399.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record10"]
margin_right = 28.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "?. . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/Record10"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="YouLabel" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 403.0
margin_right = 364.0
margin_bottom = 462.0

[node name="Label" type="Label" parent="Background/RecordsContainer/VBoxContainer/YouLabel"]
margin_right = 91.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "You"

[node name="You" type="HBoxContainer" parent="Background/RecordsContainer/VBoxContainer"]
margin_top = 466.0
margin_right = 364.0
margin_bottom = 496.0

[node name="Name" type="Label" parent="Background/RecordsContainer/VBoxContainer/You"]
margin_right = 35.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "? . . ."

[node name="Score" type="Label" parent="Background/RecordsContainer/VBoxContainer/You"]
margin_left = 39.0
margin_right = 52.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"
valign = 1
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
